Fix boxes dragging on mobile and add a style

--- a/app/assets/stylesheets/boxes.scss
+++ b/app/assets/stylesheets/boxes.scss
@@ -1,3 +1,11 @@
 // Place all the styles related to the Boxes controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: https://sass-lang.com/
+
+.dragged-item {
+  // border-color: black;
+  // border-width: 6px;
+  outline-width: 2px;
+  outline-color: red;
+  outline-style: dotted;
+}
